added image per client request

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <h3>Hand holding Light Bulb</h3>
         <img src="./images/lightbulb.jpg" alt="hand with light bulb" width="500" height="600">
     </div>
+    <div>
+        <h3>Colourful Pencils</h3>
+        <img src="./images/pencils.jpg" alt="colourful pencils" width="400" height="300">
+    </div>
 </body>
 </html>
