added another image for client

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
         <h3>Colourful Pencils</h3>
         <img src="./images/pencils.jpg" alt="colourful pencils" width="400" height="300">
     </div>
+    <div>
+        <h3>My favourite fruit: Blue Orange</h3>
+        <img src="./images/blueOrange.jpg" alt="blue orange" width="400" height="300">
+    </div>
 </body>
 </html>
