added leaves img

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         <h3>My favourite fruit: Blue Orange</h3>
         <img src="./images/blueOrange.jpg" alt="blue orange" width="400" height="300">
     </div>
+    <div>
+        <h3>Best season of the year: Autumn</h3>
+        <img src="./images/leaves.jpg" alt="leaves" width="400" height="300">
+    </div>
 </body>
 </html>
