edited blue orange header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./images/pencils.jpg" alt="colourful pencils" width="400" height="300">
     </div>
     <div>
-        <h3>My favourite fruit: Blue Orange</h3>
+        <h3>This is an orange painted blue.</h3>
         <img src="./images/blueOrange.jpg" alt="blue orange" width="400" height="300">
     </div>
     <div>
