edited leaves header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="./images/blueOrange.jpg" alt="blue orange" width="400" height="300">
     </div>
     <div>
-        <h3>Best season of the year: Autumn</h3>
+        <h3>This is an image of dried leaves.</h3>
         <img src="./images/leaves.jpg" alt="leaves" width="400" height="300">
     </div>
 </body>
