added hello world

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         <h3>This is an image of dried leaves.</h3>
         <img src="./images/leaves.jpg" alt="leaves" width="400" height="300">
     </div>
+    <div>
+        <h1>HELLO WORLD!!!!!!!</h1>
+    </div>
 </body>
 </html>
